--- a/.gitignore
+++ b/.gitignore
@@ -58,4 +58,4 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
-Assets/Scripts/CharacterController/PlayerMovement.cs
+Assets/Huge Mocap Library/
